fix: complete PEA deopt reconstruction coverage